feat: Add multi-tenant support, repository pattern, and validation schemas
- Add tenant_id column to scan_results, notifications, and grants tables
- Create tenants table for tenant management
- Implement row-level security (RLS) policies (prepared, not enabled)
- Add composite indexes for tenant-scoped queries

- VulnerabilityRepository: Complete CRUD with CVE lookup, severity filtering,
  CVSS filtering, package search, bulk upsert, and statistics
- ScanRepository: CRUD with tenant isolation, vulnerability associations,
  status management, and cleanup operations
- BaseRepository: Abstract base with tenant isolation, audit logging,
  pagination, and transaction helpers

- VulnerabilityCreate/Update/Response schemas with CVE validation
- ScanResultCreate/Response schemas with package manager normalization
- SeverityLevel and ScanStatus enums
- APIResponse, ErrorResponse, PaginatedResponse common schemas

- security.yml: Dependency scanning, code analysis, secrets detection,
  container scanning, Sentinel self-scan
- license-guard.yml: Apache-2.0 license verification, dependency license
  checking, source file header verification

- Migration script 002_add_tenant_support.sql
- upsert_vulnerability() PostgreSQL function for bulk imports
- vulnerability_stats view for dashboard queries
- Optimized indexes for common query patterns

- Comprehensive tests for VulnerabilityRepository
- Comprehensive tests for ScanRepository
- Pydantic schema validation tests
- Test fixtures and conftest for Talon tests

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,83 @@
 # Environment Configuration
 # Copy to .env and fill in your values
 
+# =============================================================================
 # Database
+# =============================================================================
 POSTGRES_USER=lucius
 POSTGRES_PASSWORD=lucius_secret
 POSTGRES_DB=lucius_db
+DATABASE_URL=postgresql://lucius:lucius_secret@localhost:5432/lucius_db
 
+# =============================================================================
+# Redis
+# =============================================================================
+REDIS_URL=redis://localhost:6379/0
+CELERY_BROKER_URL=redis://localhost:6379/1
+CELERY_RESULT_BACKEND=redis://localhost:6379/2
+
+# =============================================================================
 # Flask
+# =============================================================================
 FLASK_ENV=development
 SECRET_KEY=change-me-in-production-use-strong-random-key
 
-# Logging
-LOG_LEVEL=INFO
+# =============================================================================
+# Multi-Tenancy
+# =============================================================================
+# Default tenant ID for single-tenant deployments
+DEFAULT_TENANT_ID=default
 
+# =============================================================================
+# Logging
+# =============================================================================
+LOG_LEVEL=INFO
+# Set to true for JSON structured logs (recommended for production)
+LOG_JSON_FORMAT=false
+
+# =============================================================================
 # NVD API (for vulnerability scanning)
 # Get your API key from: https://nvd.nist.gov/developers/request-an-api-key
+# =============================================================================
 NVD_API_KEY=
 
+# =============================================================================
 # Twilio (for SMS notifications)
+# =============================================================================
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_FROM_NUMBER=
 
+# =============================================================================
 # SendGrid (for email notifications)
+# =============================================================================
 SENDGRID_API_KEY=
+SENDGRID_FROM_EMAIL=alerts@lucius.io
 
+# =============================================================================
 # Slack (for Slack notifications)
+# =============================================================================
 SLACK_WEBHOOK_URL=
+
+# =============================================================================
+# Security Scanning
+# =============================================================================
+# Safety API key for vulnerability checking
+SAFETY_API_KEY=
+# Semgrep token for code analysis
+SEMGREP_APP_TOKEN=
+
+# =============================================================================
+# Rate Limiting
+# =============================================================================
+# Requests per minute for external APIs
+NVD_RATE_LIMIT=30
+OSV_RATE_LIMIT=100
+
+# =============================================================================
+# Caching
+# =============================================================================
+# CVE cache TTL in seconds (default: 1 hour)
+CVE_CACHE_TTL=3600
+# Scan result cache TTL in seconds (default: 5 minutes)
+SCAN_CACHE_TTL=300
