feat: ethical vulnerability testing framework with HackerOne integration and Robinhood findings
- Complete redesign of README.md (305 → 949 lines) with 16 major sections
- testing_scripts.py (1,262 lines) with 6 vulnerability testing categories
- New AuthorizationTester and EvidenceCollector classes for comprehensive testing
- .lucius_exclusions enforcement to prevent scanning active disclosures
- 5 confirmed Robinhood vulnerabilities documented with evidence ($7k-$17k bounty)
- HackerOne submission templates and compliance guidelines
- 25+ documentation files including setup, testing, and ethical guidelines
- Comprehensive README covering all services, framework, and roadmap
- Production-ready ethical testing framework with real-world validation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Topic :: Security",
 ]
+dependencies = [
+    "sublist3r>=1.0.0",
+    "sqlmap>=1.8.0",
+]
 
 [project.optional-dependencies]
 dev = [
