security: remove sensitive vulnerability disclosure data and update .gitignore
CRITICAL: Removed active HackerOne disclosure files from public repository
- Removed all ROBINHOOD_* files containing vulnerability evidence
- Removed CONFIRMED_FINDINGS.md with exploit details
- Removed SUBMISSION_READY.md with HackerOne submission
- Removed all robinhood_*.json test results
- Updated .gitignore to prevent future sensitive data commits

These files contain active vulnerability disclosures and should remain
private until Robinhood confirms resolution and authorizes publication.

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,27 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Vulnerability findings and security research (DO NOT COMMIT)
+*findings*.json
+*evidence*.txt
+ROBINHOOD_*
+robinhood_*
+SUBMISSION_READY.md
+CONFIRMED_FINDINGS.md
+SCAN_HALT_NOTICE.md
+*_EVIDENCE_*.txt
+*_FINDINGS.md
+*_ASSESSMENT_*.md
+*_COMPLIANCE_*.md
+
+# Test results
+results.json
+test_results.json
+scan_results.json
+
+# Sensitive configuration
+.env.local
+*.key
+*.pem
+secrets.yml
